# aspect-gazelle

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  go.work  go.work.sum
bazel/go/: BUILD.bazel
common/: BUILD.bazel  MODULE.bazel  README.md  directives.go  error.go  error_test.go  gazelle.bzl  glob.go  glob_test.go  go.mod  go.sum  regex.go  regex_test.go  set.go  set_test.go  walk.go  worker.go  worker_test.go
common/bazel/: BUILD.bazel  bazelignore.go  bazelignore_test.go
common/bazel/go/: BUILD.bazel  tools.go
common/bazel/go/sa/: sa.go  (+1 more)
common/bazel/workspace/: BUILD.bazel  finder_test.go
common/buildinfo/: BUILD.bazel  build_info.go  build_info_test.go
common/cache/: BUILD.bazel  README.md  cache.go  disk.go  disk_test.go  filecompute.go  filecompute_test.go  noop.go  readfile.go  watch.go  watch_test.go
common/logger/: logger.go
common/patches/: go-smacker-bazel.patch  go-tree-sitter-bazel.patch  go-tree-sitter-tree_sitter.patch  tree-sitter-python-cc_library.patch
common/prefetch/: BUILD.bazel  prefetch.go  prefetch_test.go
common/rule/: BUILD.bazel  glob.go  glob_test.go  rules.go  rules_test.go
common/tools/gazelle/: BUILD.bazel
common/treesitter/: BUILD.bazel  batch.go  batch_test.go  filters.go  filters_test.go  parser.go  parser_test.go  queries.go  query.go
common/treesitter/tsbatch/: BUILD.bazel  shim.c  shim.h  tsbatch.go  tsbatch_test.go
language/js/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  config.go  config_test.go  configure.go  generate.go  generate_test.go  go.mod  go.sum  kinds.go  language.go  resolve.go  resolve_test.go  target.go
language/js/node/: BUILD.bazel  package.go  package_test.go  paths.go  paths_test.go  std_modules.go  std_modules.list  std_modules_test.go
language/js/parser/: BUILD.bazel  parser.go  parser_test.go
language/js/platform/: BUILD.bazel
language/js/pnpm/: BUILD.bazel  parser.go  parser_test.go  parser_v5.go  parser_v6.go  parser_v9.go  workspace.go
language/js/proto/: BUILD.bazel  proto.go
language/js/tests/: BUILD.bazel
language/js/typescript/: BUILD.bazel  config.go  config_test.go  tsconfig.go  tsconfig_test.go
language/kotlin/: BUILD.bazel  MODULE.bazel  README.md  configure.go  generate.go  go.mod  go.sum  imports.go  imports_test.go  kotlin.go  kotlin_test.go  language.go  resolver.go
language/kotlin/git/: BUILD.bazel  gitignore.go
language/kotlin/kotlinconfig/: BUILD.bazel  config.go  config_test.go
language/kotlin/parser/: BUILD.bazel  parser.go  parser_test.go
language/kotlin/tests/: BUILD.bazel
language/orion/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  builtin.go  config.go  configure.go  generate.go  generate_test.go  go.mod  go.sum  host.go  resolver.go
language/orion/platform/: BUILD.bazel
language/orion/plugin/: BUILD.bazel  database.go  plugin.go  plugin.star.go  queries.go  queries.star.go  target.go  target.star.go
language/orion/plugins/: bzl.axl  kotlin.axl  maven.axl
language/orion/queries/: BUILD.bazel  ast.go  jq.go  queries.go  regex.go  toml.go  yq.go  yq_test.go
language/orion/query/: BUILD.bazel  query.go  query_test.go
language/orion/starlark/: eval.go  eval_test.go
language/orion/starzelle/: BUILD.bazel  plugin.go  sdk.go
language/orion/tests/: BUILD.bazel  bzl
prebuilt/: .gitignore  BUILD.bazel  MODULE.bazel  MODULE.bazel.tmpl  README.md  def.bzl  extensions.bzl  generate.py  integrity.bzl  rules.bzl
prebuilt/toolchain/: BUILD.bazel  defs.bzl
runner/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  def.bzl  go.mod  go.sum  llvm.MODULE.bazel  rules.bzl  runner.go  runner_test.go
runner/language/bzl/: BUILD.bazel  gazelle.go
runner/patches/: bazelbuild_bazel-gazelle_aspect-cli.patch  bazelbuild_bazel-gazelle_aspect-watchman.patch  bazelbuild_bazel-rules_python-tree-sitter.patch  toolchains_llvm.patch
runner/pkg/git/: BUILD.bazel  configurer.go  gazelle-gitignore.patch  gitignore.go  gitignore_test.go
runner/pkg/ibp/: BUILD.bazel  client.go  client_test.go  protocol.go  protocol_test.go
runner/pkg/socket/: json.go  socket.go
runner/pkg/watchman/: BUILD.bazel  cache.go  watch.go  watch_test.go
runner/progress/: BUILD.bazel  progress.go
runner/tests/: BUILD.bazel
runner/tests/buf/: WORKSPACE  buf.yaml
runner/tests/cc/: BUILD.out  WORKSPACE
runner/tests/cli-fix-cgo_library/: BUILD.in  BUILD.out  WORKSPACE  foo.go  go.mod
runner/tests/cli-fix-mode-diff/: WORKSPACE  arguments.txt
runner/tests/cli-fix-mode-fix/: WORKSPACE  arguments.txt
runner/tests/cli-update-mode-diff/: WORKSPACE  arguments.txt  expectedStdout.txt
runner/tests/cli-update-mode-fix/: WORKSPACE  arguments.txt
runner/tests/crossresolve-js/: js-imported.axl  js-importing.axl
runner/tests/crossresolve-js-imports-orion/: BUILD.out  WORKSPACE  codegen.axl  main.ts
runner/tests/crossresolve-orion-imports-js/: BUILD.out  WORKSPACE  bundle.axl  web.app
runner/tests/crossresolve-outdirs/: BUILD.out  WORKSPACE  consumer.axl
runner/tests/crossresolve-pnpm/: npm-importing.axl  pnpm-lock.yaml
runner/tests/crossresolve-pnpm-names/: npm-importing.axl
runner/tests/golang/: BUILD.in  BUILD.out  WORKSPACE  go.mod  main.go
runner/tests/imports-missing/: expectedStderr.txt
runner/tests/java/: WORKSPACE  expectedStderr.txt
runner/tests/jest-targets/: BUILD.out  WORKSPACE  index.spec.ts  index.ts  jest.axl
tools/format/: BUILD.bazel
treesitter/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
treesitter/golang/: BUILD.bazel  binding.go
treesitter/hcl/: BUILD.bazel  binding.go
treesitter/java/: BUILD.bazel  binding.go
treesitter/json/: BUILD.bazel  binding.go
treesitter/kotlin/: BUILD.bazel  binding.go
treesitter/patches/: go-tree-sitter-abi15.patch
treesitter/python/: BUILD.bazel  binding.go
treesitter/ruby/: BUILD.bazel  binding.go
treesitter/rust/: BUILD.bazel  binding.go
treesitter/starlark/: BUILD.bazel  binding.go
treesitter/tsx/: BUILD.bazel  binding.go
treesitter/typescript/: BUILD.bazel  binding.go
(+1211 files in other folders)
