module(
    name = "aspect_gazelle",
    compatibility_level = 0,
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")  # must match go.mod
bazel_dep(name = "aspect_treesitter_grammars", version = "0.0.0")

# The shared nogo config lives in //common (@…_common//bazel/go:nogo), reached
# via go_deps materialization. Common, language/*, and runner each have their
# own MODULE.bazel and pull what they need from their own go.mod files.

####### Dev dependencies ########

local_path_override(
    module_name = "aspect_treesitter_grammars",
    path = "treesitter",
)

# Go SDK version which can only be defined in a root MODULE
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(
    name = "go_sdk",
    version = "1.26.3",
)
use_repo(go_sdk, "go_sdk")

# Go deps loaded just for bazel/tools
go_deps2 = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps2.module(
    path = "google.golang.org/genproto/googleapis/api",
    sum = "h1:8XJ4pajGwOlasW+L13MnEGA8W4115jJySQtVfS2/IBU=",
    version = "0.0.0-20250929231259-57b25ae835d4",
)
use_repo(go_deps2, "org_golang_google_genproto_googleapis_api")

bazel_dep(name = "aspect_rules_lint", version = "2.3.0", dev_dependency = True)
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)
