load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common",
    srcs = [
        "directives.go",
        "error.go",
        "glob.go",
        "regex.go",
        "set.go",
        "walk.go",
        "worker.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logger",
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@bazel_gazelle//rule",
        "@bazel_gazelle//walk",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@com_github_emirpasic_gods_v2//sets/treeset",
    ],
)

go_test(
    name = "common_test",
    srcs = [
        "error_test.go",
        "glob_test.go",
        "set_test.go",
    ],
    embed = [":common"],
    deps = [
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
    ],
)
