module(name = "aspect_gazelle_common")

# repo_name aliases align local names with the canonical names that gazelle
# emits inside go_deps materializations. With these, the same source BUILDs
# work both when common is built standalone and when it's materialized via
# go_deps in a consumer module — no `build_file_generation = "clean"`
# override needed downstream.
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.51.0", repo_name = "bazel_gazelle")
bazel_dep(name = "aspect_treesitter_grammars", version = "1.0.0")

# Go modules
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_bmatcuk_doublestar_v4",
    "com_github_emirpasic_gods_v2",
    "com_github_onsi_gomega",
    "com_github_smacker_go_tree_sitter",
    "in_gopkg_op_go_logging_v1",
    "org_golang_x_tools",  # for //bazel/go:nogo
)

####### Dev dependencies ########

local_path_override(
    module_name = "aspect_treesitter_grammars",
    path = "../treesitter",
)

go_deps_dev = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@aspect_treesitter_grammars//patches:go-tree-sitter-abi15.patch"],
    path = "github.com/smacker/go-tree-sitter",
)

# Go SDK version
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.nogo(nogo = "//bazel/go:nogo")
go_sdk.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
use_repo(go_sdk, "go_sdk")
