module(name = "aspect_gazelle_common")

# repo_name uses the canonical gazelle/rules_go names so common's checked-in
# BUILD files resolve identically whether built here as the root module or
# consumed via go.mod / `go_deps` (where rules_go is "io_bazel_rules_go" and
# gazelle is "bazel_gazelle").
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.51.3", repo_name = "bazel_gazelle")  # must match go.mod

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_bmatcuk_doublestar_v4", "com_github_emirpasic_gods_v2", "com_github_smacker_go_tree_sitter", "in_gopkg_op_go_logging_v1", "org_golang_x_tools")

####### Dev dependencies ########

# Used for write_source_files() and should never be consumed as non-dev dep.
bazel_dep(name = "bazel_lib", version = "3.0.0", dev_dependency = True)

# Grammars used only by //treesitter:treesitter_test.
bazel_dep(name = "aspect_treesitter_grammars", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_treesitter_grammars",
    path = "../treesitter",
)

# Effective only when this is the root module. Downstream consumers must reapply
# this patch themselves (see @aspect_treesitter_grammars//patches).
go_deps_dev = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@aspect_treesitter_grammars//patches:go-tree-sitter-abi15.patch"],
    path = "github.com/smacker/go-tree-sitter",
)

# Expose the smacker source tree so //treesitter/tsbatch:vendored_api_h can read
# api.h as a copy-from source. Dev-only (the re-vendor/drift-check tooling).
go_deps_dev.gazelle_override(
    directives = ["gazelle:default_visibility //visibility:public"],
    path = "github.com/smacker/go-tree-sitter",
)

# Go SDK version (only honored when this is the root module; ignored downstream).
# //bazel/go:nogo is the shared nogo config; consumers reference it via the
# go_deps repo (@com_github_aspect_build_aspect_gazelle_common//bazel/go:nogo).
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.nogo(nogo = "//bazel/go:nogo")
go_sdk.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
use_repo(go_sdk, "go_sdk")
