module(
    name = "aspect_gazelle_prebuilt",
    version = "0.0.0",
    bazel_compatibility = [">=7.6.0"],
)

bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "platforms", version = "1.0.0")

# Ensure rules_go is bazel9 compatible
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = None)

prebuilt_ext = use_extension("//:extensions.bzl", "prebuilt_extension")
use_repo(
    prebuilt_ext,
    "aspect_gazelle_prebuilt_darwin_amd64",
    "aspect_gazelle_prebuilt_darwin_arm64",
    "aspect_gazelle_prebuilt_linux_amd64",
    "aspect_gazelle_prebuilt_linux_arm64",
)

register_toolchains("//toolchain:all")

# Dev only

bazel_dep(name = "aspect_gazelle_runner", dev_dependency = True)

# Go module patching. Dev only and must be done manually if this MODULE is consumed elsewhere.
go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = [
        "@aspect_gazelle//common/patches:go-tree-sitter-bazel.patch",
        "@aspect_gazelle//common/patches:go-tree-sitter-tree_sitter.patch",
    ],
    path = "github.com/tree-sitter/go-tree-sitter",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@aspect_gazelle//common/patches:go-smacker-bazel.patch"],
    path = "github.com/smacker/go-tree-sitter",
)

local_path_override(
    module_name = "aspect_gazelle_runner",
    path = "../runner",
)

local_path_override(
    module_name = "aspect_gazelle",
    path = "..",
)

local_path_override(
    module_name = "aspect_gazelle_js",
    path = "../language/js",
)

local_path_override(
    module_name = "aspect_gazelle_kotlin",
    path = "../language/kotlin",
)

local_path_override(
    module_name = "aspect_gazelle_orion",
    path = "../language/orion",
)
