module(
    name = "aspect_gazelle_prebuilt",
    version = "0.0.0",
    bazel_compatibility = [">=7.6.0"],
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")

prebuilt_ext = use_extension("//:extensions.bzl", "prebuilt_extension")
use_repo(
    prebuilt_ext,
    "aspect_gazelle_prebuilt_darwin_amd64",
    "aspect_gazelle_prebuilt_darwin_arm64",
    "aspect_gazelle_prebuilt_linux_amd64",
    "aspect_gazelle_prebuilt_linux_arm64",
)

register_toolchains("//toolchain:all")

# Dev only

bazel_dep(name = "gazelle", version = "0.50.0", dev_dependency = True)
