load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library")

# Use the gazelle bazel modules instead of go.mod modules
# gazelle:resolve_regexp go github.com/bazel-contrib/rules_python/gazelle/(.*) @rules_python_gazelle_plugin//$1
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/common(/.*)? @aspect_gazelle//common$1
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/runner/(.*) //$1

gazelle(
    name = "gazelle",
    extra_args = ["-index=lazy"],
    gazelle = "@aspect_gazelle//:gazelle_bin",
)

gazelle(
    name = "gazelle.check",
    gazelle = "@aspect_gazelle//:gazelle_bin",
    mode = "diff",
)

gazelle_binary(
    name = "gazelle_prebuilt_bin",
    languages = [
        "//language/bzl",
        "@rules_python_gazelle_plugin//python",
        "@aspect_gazelle_js",
        "@aspect_gazelle_kotlin",
        "@aspect_gazelle_orion",
        "@gazelle_cc//language/cc",
        "@gazelle//language/proto",
        "@gazelle//language/go",
    ],
)

# Target name matching MODULE name
alias(
    name = "aspect_gazelle_runner",
    actual = ":runner",
    visibility = ["//visibility:public"],
)

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//language/bzl",
        "//pkg/git",
        "//pkg/ibp",
        "//progress",
        "//vendored/gazelle",
        "@aspect_gazelle//common/bazel",
        "@com_github_aspect_build_aspect_gazelle_language_js//:js",
        "@com_github_aspect_build_aspect_gazelle_language_orion//:orion",
        "@com_github_bazelbuild_bazel_gazelle//config",
        "@com_github_bazelbuild_bazel_gazelle//language",
        "@com_github_bazelbuild_bazel_gazelle//language/go",
        "@com_github_bazelbuild_bazel_gazelle//language/proto",
        "@com_github_engflow_gazelle_cc//language/cc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_x_term//:term",
        "@rules_python_gazelle_plugin//python",
    ],
)
