load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# Use the gazelle bazel modules instead of go.mod modules
# gazelle:resolve_regexp go github.com/bazelbuild/bazel-gazelle/(.*) @gazelle//$1
# gazelle:resolve_regexp go github.com/bazel-contrib/rules_python/gazelle/(.*) @rules_python_gazelle_plugin//$1
# gazelle:resolve_regexp go github.com/bufbuild/rules_buf/(.*) @rules_buf//$1
# gazelle:resolve_regexp go github.com/EngFlow/gazelle_cc/(.*) @gazelle_cc//$1
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/language/js @aspect_gazelle_js
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/language/orion @aspect_gazelle_orion
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/language/kotlin @aspect_gazelle_kotlin
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/runner/(.*) //$1

# Explicit resolves for go_deps-managed modules whose labels gazelle's go-language
# resolver computes incorrectly when given the go_deps-generated repo_config
# WORKSPACE. Without these, gazelle strips the deps as "unrecognized" and the build
# fails with `compilepkg: missing strict dependencies`.
# gazelle:resolve go github.com/aspect-build/aspect-gazelle/common @com_github_aspect_build_aspect_gazelle_common//:common
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/common/(.+) @com_github_aspect_build_aspect_gazelle_common//$1
# gazelle:resolve go github.com/bazelbuild/buildtools/build @com_github_bazelbuild_buildtools//build
# gazelle:resolve go github.com/fatih/color @com_github_fatih_color//:color
# gazelle:resolve go github.com/go-git/go-git/v5/plumbing/format/gitignore @com_github_go_git_go_git_v5//plumbing/format/gitignore
# gazelle:resolve go github.com/pmezard/go-difflib/difflib @com_github_pmezard_go_difflib//difflib
# gazelle:resolve go go.opentelemetry.io/otel @io_opentelemetry_go_otel//:otel
# gazelle:resolve go go.opentelemetry.io/otel/attribute @io_opentelemetry_go_otel//attribute
# gazelle:resolve go go.opentelemetry.io/otel/trace @io_opentelemetry_go_otel_trace//:trace
# gazelle:resolve go golang.org/x/term @org_golang_x_term//:term
# gazelle:resolve go gopkg.in/yaml.v3 @in_gopkg_yaml_v3//:yaml_v3

alias(
    name = "gazelle",
    actual = "//tools/gazelle",
)

# The target used to publish the prebuilt gazelle binary.
alias(
    name = "gazelle_prebuilt_bin",
    actual = "//bin/gazelle:gazelle",
    visibility = ["//visibility:public"],
)

# Target name matching MODULE name
alias(
    name = "aspect_gazelle_runner",
    actual = ":runner",
    visibility = ["//visibility:public"],
)

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/git",
        "//pkg/ibp",
        "//progress",
        "//vendored/bzl",
        "//vendored/gazelle",
        "@aspect_gazelle_js",
        "@aspect_gazelle_kotlin",
        "@aspect_gazelle_orion",
        "@com_github_aspect_build_aspect_gazelle_common//cache",
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//language/bazel/visibility",
        "@gazelle//language/go",
        "@gazelle//language/proto",
        "@gazelle//rule",
        "@gazelle_cc//language/cc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_x_term//:term",
        "@rules_buf//gazelle/buf",
        "@rules_python_gazelle_plugin//python",
    ],
)

bzl_library(
    name = "rules",
    srcs = ["rules.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@gazelle//:def"],
)

bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//:rules"],
)

go_test(
    name = "runner_test",
    srcs = ["runner_test.go"],
    embed = [":runner"],
)
