module(
    name = "aspect_treesitter_grammars",
    compatibility_level = 0,
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.3")  # only for go_deps extension

# gotreesitter bundles each tree-sitter grammar as pure Go (no cgo / C sources),
# so this module no longer fetches grammar archives or patches a cgo runtime.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_odvcencio_gotreesitter")

####### Dev dependencies ########

bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)  # for build_test

# Go SDK version (only honored when this is the root module; ignored downstream).
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
use_repo(go_sdk, "go_sdk")
