module(
    name = "aspect_treesitter_grammars",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")  # only for go_deps extension

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_smacker_go_tree_sitter")

####### Dev dependencies ########

# Effective only when this is the root module. Downstream consumers must
# reapply this — see //patches:go-tree-sitter-abi15.patch.
go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["//patches:go-tree-sitter-abi15.patch"],
    path = "github.com/smacker/go-tree-sitter",
)

# Go SDK version (only honored when this is the root module; ignored downstream).
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
use_repo(go_sdk, "go_sdk")

# Tree-sitter grammar source archives.
# Internal to this module; Bazel fetches each lazily, only when a grammar that
# references it is built.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "tree-sitter-go",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "ac412018d59f7cd5bb72fbde557e9ebf9fdfac12c5853f2bb03669f980a953bb",
    urls = ["https://github.com/tree-sitter/tree-sitter-go/releases/download/v0.25.0/tree-sitter-go.tar.gz"],
)

http_archive(
    name = "tree-sitter-rust",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "953d7a7122cc004d3ad516ae193dde408e633c2da59356ba67e713f3e52d73fc",
    urls = ["https://github.com/tree-sitter/tree-sitter-rust/releases/download/v0.24.2/tree-sitter-rust.tar.gz"],
)

http_archive(
    name = "tree-sitter-java",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "ed766e1045be236e50a7f99295996f6705d7506628b79af80d1fd5efb63c86a7",
    urls = ["https://github.com/tree-sitter/tree-sitter-java/releases/download/v0.23.5/tree-sitter-java.tar.xz"],
)

http_archive(
    name = "tree-sitter-json",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "acf6e8362457e819ed8b613f2ad9a0e1b621a77556c296f3abea58f7880a9213",
    strip_prefix = "tree-sitter-json-0.24.8",
    urls = ["https://github.com/tree-sitter/tree-sitter-json/archive/v0.24.8.tar.gz"],
)

http_archive(
    name = "tree-sitter-kotlin",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "666c67f4486d6f7ebeb6418a956f3d7599b3e200e42fe583312c92182ce731d0",
    strip_prefix = "tree-sitter-kotlin-6b9788578ae23a1bc7c87e8d564e0daf7671dee3",
    urls = ["https://github.com/fwcd/tree-sitter-kotlin/archive/6b9788578ae23a1bc7c87e8d564e0daf7671dee3.tar.gz"],
)

http_archive(
    name = "tree-sitter-starlark",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "31c58a540d738a17b366f2046da298b66dfa0695bcbfa207f61fa63cfe5c03ed",
    strip_prefix = "tree-sitter-starlark-1.3.0",
    urls = ["https://github.com/tree-sitter-grammars/tree-sitter-starlark/archive/v1.3.0.tar.gz"],
)

http_archive(
    name = "tree-sitter-typescript",
    build_file_content = """
filegroup(
name = "typescript-srcs",
srcs = glob(["common/**/*.h", "typescript/src/**/*.h", "typescript/src/**/*.c"]),
visibility = ["//visibility:public"],
)
filegroup(
name = "tsx-srcs",
srcs = glob(["common/**/*.h", "tsx/src/**/*.h", "tsx/src/**/*.c"]),
visibility = ["//visibility:public"],
)
""",
    sha256 = "2c4ce711ae8d1218a3b2f899189298159d672870b5b34dff5d937bed2f3e8983",
    strip_prefix = "tree-sitter-typescript-0.23.2",
    urls = ["https://github.com/tree-sitter/tree-sitter-typescript/archive/v0.23.2.tar.gz"],
)

http_archive(
    name = "tree-sitter-hcl",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "a95bc6b00271e08dee9e63b895b2563dac802db0015fdf5a24a1b0244f2cb560",
    strip_prefix = "tree-sitter-hcl-1.2.0",
    urls = ["https://github.com/tree-sitter-grammars/tree-sitter-hcl/archive/v1.2.0.tar.gz"],
)

http_archive(
    name = "tree-sitter-ruby",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    integrity = "sha256-5+SVd93B8t6OQtQjU7R34zjBW7uVslWOEj3cE9iHifA=",
    strip_prefix = "tree-sitter-ruby-0.23.1",
    urls = ["https://github.com/tree-sitter/tree-sitter-ruby/archive/v0.23.1.tar.gz"],
)
