load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bazel",
    srcs = [
        "bazel.go",
        "bazelignore.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/bazel",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/workspace",
        "//logger",
    ],
)

go_test(
    name = "bazel_test",
    srcs = ["bazelignore_test.go"],
    embed = [":bazel"],
)
