load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "configurer.go",
        "disk.go",
        "noop.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//buildinfo",
        "//logger",
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//rule",
    ],
)
